fix too large images in medium card (outlook)

--- a/test/dummy/app/assets/stylesheets/modules/mailer/_media_queries.sass
+++ b/test/dummy/app/assets/stylesheets/modules/mailer/_media_queries.sass
@@ -78,6 +78,9 @@ $dummy-mailer-styles: false !default
       &__image-inner
         padding: $mailer-gap-b !important
 
+      &__image
+        width: 100% !important
+
       &__content-inner
         padding: $mailer-gap-b !important
 
