--- a/test/dummy/app/components/dummy/mailer/cards/medium_component.sass
+++ b/test/dummy/app/components/dummy/mailer/cards/medium_component.sass
@@ -32,6 +32,7 @@ $dummy-mailer-styles: false !default
 
     &__image
       border-radius: $mailer-border-radius-sm
+      width: 200px
 
     &__content-wrapper
       width: 100%
